<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcl_logging_android</name>
  <version>1.0.0</version>
  <description>An rcl logger implementation using the Android NDK logger.</description>

  <maintainer email="shane.loretz@gmail.com">Shane Loretz</maintainer>

  <license>Apache License 2.0</license>

  <author email="shane.loretz@gmail.com">Shane Loretz</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcl_logging_interface</depend>
  <depend>rcutils</depend>

  <member_of_group>rcl_logging_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
